# SFM

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.a100.yaml  config.example.yaml  config.yaml  generate_dense_stls_ablation.sh  generate_dense_stls_n80.sh  pyproject.toml  resume_dense_stls_ablation.sh  run_buda_a100.sh  run_estatua_a100.sh  run_leon_a100.sh
frontend/: Dockerfile  nuxt.config.ts  package.json
frontend/assets/styles/: main.css
frontend/components/: PointCloudViewer.client.vue
frontend/pages/: index.vue
frontend/server/api/: models.get.ts
frontend/server/api/models/: [id].get.ts
frontend/server/utils/: model-data.ts
frontend/types/: models.ts
notebooks/: sfm_visual_workflow.ipynb
ops/scripts/: run_buda_a100.sh  run_estatua_a100.sh  run_leon_a100.sh
report/: main.tex
report/scripts/: generate_report_figures.py
scripts/: generate_visual_notebook.py
sfm_pipeline/: __init__.py  __main__.py  analysis.py  cli.py  colmap.py  config.py  notebook_utils.py  plots.py
tests/: test_analysis.py  test_cli.py
